tests/fsharp/typecheck/sigs/neg115.bsl

neg115.fs(8,30,8,34): typecheck error FS0001: Expecting a type supporting the operator 'get_Item1' but given a tuple type
